# Code_Project

./: README.md
Fusion/kinfu/: CMakeLists.txt  demo.cpp  grab_kinect2.h
Fusion/kinfu_remake-K2/: CMakeLists.txt  CMakeLists.txt.user.0ba5fb1  CMakeLists.txt.user.a65885a
Fusion/kinfu_remake-K2-6-6/: README.md  (+1 more)
Fusion/kinfu_remake-K2-6-6/apps/: CMakeLists.txt  demo.cpp  grab_kinect2.cpp
Fusion/kinfu_remake-K2-6-6/kfusion/: CMakeLists.txt
Fusion/kinfu_remake-K2-6-6/kfusion/include/kfusion/cuda/: device_array.hpp
Fusion/kinfu_remake-K2-6-6/kfusion/src/: device_memory.cpp  imgproc.cpp  internal.hpp  kinfu.cpp  precomp.hpp  tsdf_volume.cpp
Fusion/kinfu_remake-K2-6-6/kfusion/src/cuda/: device.hpp  proj_icp.cu  tsdf_volume.cu
Fusion/kinfu_remake-K2/apps/: CMakeLists.txt  demo.cpp
Fusion/kinfu_remake-K2/kfusion/: CMakeLists.txt
Fusion/kinfu_remake-K2/kfusion/include/io/: capture.hpp
Fusion/kinfu_remake-K2/kfusion/include/kfusion/: types.hpp
Fusion/kinfu_remake-K2/kfusion/include/kfusion/cuda/: tsdf_volume.hpp
Fusion/kinfu_remake-K2/kfusion/src/: capture.cpp  internal.hpp  kinfu.cpp  precomp.hpp  projective_icp.cpp  tsdf_volume.cpp
Fusion/kinfu_remake-K2/kfusion/src/cuda/: device.hpp  imgproc.cu  proj_icp.cu  tsdf_volume.cu
catkin_Backup/facial_feature_points_3d/: CMakeLists.txt  package.xml
catkin_Backup/facial_feature_points_3d/include/: grab_image.h  points_3d_show.h
catkin_Backup/facial_feature_points_3d/src/: grab_image.cpp  main.cpp  points_3d_show.cpp
catkin_Backup/kinect2_test/cv_bridge_kinect2/: CMakeLists.txt  CMakeLists.txt.user.504238b
catkin_Backup/kinect2_test/cv_bridge_kinect2/include/: slamBase.h
catkin_Backup/kinect2_test/cv_bridge_kinect2/src/: CMakeLists.txt  joinPointCloud.cpp  slamBase.cpp
hand_eye_calibration/cmake_hand_eye/: CMakeLists.txt  Readme
hand_eye_calibration/cmake_hand_eye/include/: hand_eye_calibrator.h
hand_eye_calibration/cmake_hand_eye/picture/: TransformPairsInput.yml
hand_eye_calibration/cmake_hand_eye/src/: hand_eye_calibrator.cpp  main.cpp
head_position/Facial-Landmarks-Annotation-Tool-master/: .gitignore  CMakeLists.txt  README.md  version.h.in
head_position/Facial-Landmarks-Annotation-Tool-master/example/: example.fad
head_position/Facial-Landmarks-Annotation-Tool-master/src/: aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  application.cpp  application.h  childwindow.cpp  childwindow.h  facedataset.cpp  facedataset.h  facedatasetmodel.cpp  facedatasetmodel.h  facefeature.cpp  facefeature.h  facefeatureedge.cpp  facefeatureedge.h  facefeaturenode.cpp  facefeaturenode.h  facefitconfig.cpp  facefitconfig.h  facefitconfig.ui  faceimage.cpp  faceimage.h  facewidget.cpp  facewidgetscene.cpp  facewidgetscene.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  utils.cpp  utils.h
head_position/Facial-Landmarks-Annotation-Tool-master/src/resources/images/: brokenimage.xcf  noface.xcf
head_position/by_me/head_location_cloud/: CMakeLists.txt  read_me
head_position/by_me/head_location_cloud/include/: grab_image.h
head_position/by_me/head_location_cloud/src/: grab_image.cpp  main.cpp
head_position/face-feature-local/: CMakeLists.txt  glAnthropometric3DModel.cpp  test.cpp
head_position/head-pose-estimation-master/: CMakeLists.txt  test.cpp
head_position/ur5_cmake/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tcpip_robot.cpp  tcpip_robot.h  untitled_test.pro
head_position/ur5_cmake/Face_recognition/: facemain.cpp  facemain.h  facepreprocess.h  facerecognition.cpp  facerecognition.h
head_position/ur5_cmake/Mydatas/: lojiInAir.cal  lojiInAir2.cal  lojiInAir3.cal  lojiInWater.cal
head_position/ur5_cmake/PD/: force_control.cpp  force_control.h
head_position/ur5_cmake/Reconstruct_3d/: reconstruct_3d.cpp  reconstruct_3d.h
head_position/ur5_cmake/Reconstruct_3d/include/kfusion/: kinfu.hpp
head_position/ur5_cmake/UR5_kin/: robotkin.cpp
head_position/ur5_cmake/bp_nn/: bp.cpp  bp.h  joint.txt
head_position/ur5_cmake/facexml/: f_t.txt  f_t483.txt  force_z.txt  force_z11.txt  force_z111.txt  force_z12.txt  force_z519.txt  forcece.txt  gravity.txt  jointce.txt  kin.txt  marker.txt  marker11.txt  marker111.txt  marker12.txt  marker519.txt  pos.txt  pos483.txt  robot.txt  robot11.txt  robot111.txt  robot12.txt  robot519.txt  robot_state.txt  robot_state4-18.txt
head_position/ur5_cmake/facexml/14/: 14.txt
head_position/ur5_cmake/force_sensor/: ftusb.cpp  ftusb.h
head_position/ur5_cmake/head_track/: track_head.cpp  track_head.h
head_position/ur5_cmake/kinect2_grab/: grab_kinect2.cpp  grab_kinect2.h
head_position/ur5_cmake/lib/LINUX_API_V1.5.1/: ReadMe.txt  eclipse.txt
head_position/ur5_cmake/lib/LINUX_API_V1.5.1/examples/eclipse/advanced/: .cproject  .project  main.cpp
head_position/ur5_cmake/lib/qcustomplot-sharedlib/sharedlib-compilation/: Makefile  Makefile.Debug  Makefile.Release  libqcustomplot.so.2.0.0
head_position/ur5_cmake/lib/qcustomplot-sharedlib/sharedlib-compilation/release/: moc_qcustomplot.cpp
head_position/ur5_cmake/logtest/build-logtest-Desktop_Qt_5_4_2_GCC_64bit-Debug/: Makefile
head_position/ur5_cmake/mythread/: mythread.cpp  mythread.h
head_position/ur5_cmake/pose_detect/: cameraposition.cpp  cameraposition.h
head_position/ur5_cmake/resources/: robot_resource.qrc
head_position/ur5_cmake/robotState/: UR5_state.cpp  UR5_state.h
head_position/ur5_cmake/textxml/: bp_param.xml
opengl_code/: test  test.c
simple/click_3D_information/3D_information/: CMakeLists.txt  Readme
simple/click_3D_information/3D_information/src/: click_rgb.cpp
simple/click_3D_information/points_click_rgb/: CMakeLists.txt
simple/click_3D_information/points_click_rgb/src/: click_rgb.cpp
simple/cv_bridge_kinect2/src/: CMakeLists.txt  joinPointCloud.cpp  slamBase.cpp
simple/multiImage/src/: CMakeLists.txt  getImage.cpp  joinPointCloud.cpp  slamBase.cpp
simple/利用libfreenect2获得图像/kinect2_depth_libfreenect2/: CMakeLists.txt  CMakeLists.txt.user.504238b  package.xml
simple/利用libfreenect2获得图像/kinect2_depth_libfreenect2/src/: test.cpp
(+319 files in other folders)
